--- a/modlist.html
+++ b/modlist.html
@@ -82,11 +82,15 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mobz">MobZ (by Globox_Z)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/skin-layers-3d">Skin Layers 3D (Fabric/Forge) (by tr9zw)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/pling">Pling (by haykam)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/elemental-creepers-refabricated">Elemental Creepers: Refabricated (by Luligabi12)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/dank-storage-fabric">Dank Storage Fabric (by tfarecnim)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-library-fabric">FTB Library (Fabric) (by FTB)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/artis-recrafted">Artis-Recrafted (by DaFuqsy)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-quests-fabric">FTB Quests (Fabric) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/industrial-revolution">Industrial Revolution (by GabrielHOlv)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-teams-fabric">FTB Teams (Fabric) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fabric-language-scala">Fabric Language Scala (by modmuss50)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/bisecthosting-server-integration-menu-fabric">BisectHosting Server Integration Menu [FABRIC] (by BisectHosting)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/item-filters-fabric">Item Filters (Fabric) (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/blast">BLAST 💣 (by doctor4t)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/croparia">Croparia v3 [FORGE/FABRIC] (by Dalarion01)</a></li>
@@ -95,6 +99,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/additional-bars-fabric">Additional Bars [FABRIC] (by Gamma1772)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/comfort-magic">Comfort: Magic (by kekie6)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/hover-pets">Hover Pets (by safrodev)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/voidz">VoidZ (by Globox_Z)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mmmmmmmmmmmm">MmmMmmMmmMmm (Target Dummy) (by MehVahdJukaar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/guardians-galore">Guardians Galore (by chirpycricket__)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bookshelf">Bookshelf (by DarkhaxDev)</a></li>
@@ -132,6 +137,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/this-rocks">This Rocks! (by Motschen)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/iceberg-fabric">Iceberg [Fabric] (by Grend_G)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/pig-pen-cipher">Pig Pen Cipher (by DarkhaxDev)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/storage-cabinet">Storage Cabinet (by AshIndigo)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/goblin-traders-fabric">Goblin Traders (Fabric) (by RobertHatterson)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/shetiphiancore-fabric">ShetiPhianCore [Fabric] (by ShetiPhian)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/time-in-a-bottle">Time in a Bottle (Fabric) (by alkyaLy)</a></li>
@@ -153,6 +159,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/library-ferret-fabric">Library Ferret - Fabric (by jtl_elisa)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/animal-feeding-trough">Animal Feeding Trough [Fabric | Forge] (by Slexom)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/modern-glass-doors">Modern Glass Doors (by Kyrptonaught)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/terrarian-slimes">Terrarian Slimes (by D4rkness_King)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/toms-storage-fabric">Tom's Simple Storage Mod (Fabric) (by tom54541)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/haema">Haema (by the_will_bl)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/caracal-mod">Caracal Mod (Fabric/Forge) (by AqUpd)</a></li>
@@ -161,6 +168,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/quartz-elevator">Quartz Elevator (by atonkish)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fastbench-for-fabric">FastBench for Fabric (by tfarecnim)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/stoneholm">Stoneholm, Underground Villages (Fabric) (by TheGrimsey)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/unforgiving-void">Unforgiving Void (by The_Fireplace)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fabric-api">Fabric API (by modmuss50)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/dynamic-music">Dynamic Music (by LudoCrypt)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/chalk-fabric">Chalk (Fabric) (by DaFuqsy)</a></li>
@@ -186,6 +194,8 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/couplings">Couplings (by HeckinChloe)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-paintings">Macaw's Paintings (by sketch_macaw)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mob-scarecrows">Mob Scarecrows (by ProbabilityPigeon)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/skinned-lanterns-fabric">Skinned Lanterns (Fabric) (by nuxthefox)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/bountiful-fabric">Bountiful (Fabric) (by ejektaflex)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-chunks-fabric">FTB Chunks (Fabric) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/earth2java-fabric">Earth2Java (by Slexom)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mining-utility">Mining Utility (by Luligabi12)</a></li>
@@ -204,6 +214,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/repurposed-structures-fabric">Repurposed Structures (Fabric) (by telepathicgrunt)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/lovely-snails">Lovely Snails (by LambdAurora)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/brazier-fabric">Brazier (Fabric) (by possible_triangle)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/giselbaers-durability-viewer">Giselbaer's Durability Viewer (by Giselbaer)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/the-graveyard-fabric">The Graveyard (FABRIC) (by finallion_13)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/deep-mob-learning-refabricated">Deep Mob Learning: Refabricated (by NathanPB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/alloy-forgery">Alloy Forgery (by LordDeatHunter)</a></li>
@@ -211,12 +222,14 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cc-restitched">CC: Restitched (by merithtk)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/oh-the-biomes-youll-go-fabric">Oh The Biomes You'll Go Refabricated (by AOCAWOL)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/appleskin">AppleSkin (by squeek502)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/expanded-storage-fabric">[Fabric] Expanded Storage (by NinjaPhenix)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/phonos">Phonos (by FoundationGames)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/simple-teleporters-fabric">Simple Teleporters (Fabric) (by Lemonszz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/blockus">Blockus (by Brandcraft_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/origins">Origins (Fabric) (by Apace100)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/autorun-fabric">AutoRun (Fabric) (by Emonadeo)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/paradise-lost">Paradise Lost (by ImmortalDevs)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/compress-em">[FABRIC] Compress 'em - Blocks & Items (by gmsg4rci4)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/trap-expansion-fabric">Trap Expansion  (Fabric) (by Lemonszz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/more-villagers-fabric">More Villagers [Fabric] (by SameDifferent)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/impaled">Impaled 🔱 (by doctor4t)</a></li>
@@ -225,6 +238,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/wmitaf">WMITAF (by ShaksterNano)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/lifts">Lifts (by D4rkness_King)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/capybara-fabric">Capybara [Fabric] (by ZestyBlaze)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/silkspawners">SilkSpawners (by LordDeatHunter)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/deep-mob-learning-simulacrum">Deep Mob Learning: Simulacrum (by ProjectET)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/wthit">WTHIT (by badasintended)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fabric-waystones">Fabric Waystones (by LordDeatHunter)</a></li>
@@ -235,8 +249,10 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/yungs-better-mineshafts-fabric">YUNG's Better Mineshafts (Fabric) (by YUNGNICKYOUNG)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sodium-extra">Sodium Extra (by FlashyReese)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-ultimine-fabric">FTB Ultimine (Fabric) (by LatvianModder)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ninjaphenixs-container-library">NinjaPhenix's Container Library (by NinjaPhenix)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/applied-energistics-2-wireless-terminals">Applied Energistics 2 Wireless Terminals (by Mari_023)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/entityculling">Entity Culling Fabric/Forge (by tr9zw)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/dual-riders">Dual Riders (by Flytre7)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/clickable-advancements">Clickable advancements[Forge/Fabric] (by someaddon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/better-beds">Better Beds (by Motschen)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/not-enough-animations">Not Enough Animations (by tr9zw)</a></li>
@@ -247,6 +263,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/no-null-processors">No Null Processors (by telepathicgrunt)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ezpas">EZ Pipes and Stuff (EZPaS) (by kqp_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/starlight">Starlight (Fabric) (by Spottedstar)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/four-elemental-swords">Four Elemental Swords [FORGE & FABRIC] (by 00theblackwolf00)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/pehkui">Pehkui (by Virtuoel)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/dashloader">DashLoader (by notequalalpha)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/applied-energistics-2">Applied Energistics 2 (by AlgorithmX2)</a></li>
@@ -290,6 +307,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/adorn">Adorn (by Juicebus)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/dawn">Dawn API (by Hugman_76)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/easy-magic-fabric">Easy Magic [Fabric] (by Fuzs_)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/largefluidtank-fabric">Large Fluid Tank for Fabric (by Kotori316)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/geckolib">GeckoLib (by ThanosGecko)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/extra-generators">Extra Generators (by D4rkness_King)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/simple-grinder">Simple Grinder (by Rumaruka)</a></li>
@@ -300,12 +318,15 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fabric-enchantments">Fabric Enchantments (by safrodev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/impersonate">Impersonate (by PyrofabTheModsmith)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/coxinha-utilities">Coxinha Utilities (by Luligabi12)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/luminous-wool">Luminous Wool (by zoeytheegoist)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-lights-and-lamps">Macaw's Lights and Lamps (by sketch_macaw)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/gobber-fabric">Gobber [FABRIC] (by kwpugh)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/archon">Archon (by safrodev)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/kambrik">Kambrik (by ejektaflex)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/xaeros-minimap">Xaero's Minimap (by xaero96)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fix-experience-bug">Fix Experience Bug (now with FABRIC and FORGE versions) (by MacTso)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/legendary-tooltips-fabric">Legendary Tooltips [Fabric] (by Grend_G)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/inmis">Inmis (by Draylar1)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/explorers-compass">Explorer's Compass (by Chaosyr)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/npc-variety-port">NPC Variety - Port (Fabric) (by YumatanGames)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/nikolite-expansion">Nikolite Expansion (by Luligabi12)</a></li>
@@ -314,6 +335,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-fences-and-walls">Macaw's Fences and Walls (by sketch_macaw)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/natures-compass">Nature's Compass (by Chaosyr)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cosmetic-armor-fabric">Cosmetic Armor [FABRIC] (by Apace100)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/continuity">Continuity (by Pepper_Bell)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/dustrial-decor-fabric">'Dustrial Decor [Fabric] (by slomax907)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/dimension-fix-some-forge-patches-ported">Dimension Fix (Some Forge Patches Ported) (by shedaniel)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/adventurez">AdventureZ (by Globox_Z)</a></li>
