--- a/modlist.html
+++ b/modlist.html
@@ -35,6 +35,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/dragonloot">DragonLoot (by pois1xlive)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/spoorn-weapon-attributes">Spoorn Weapon Attributes (by spoorn)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/akashic-tome-of-tools-fabric">Akashic Tome of Tools Fabric (by vlad2305m)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/extra-alchemy">Extra Alchemy (by zabi94)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/betterf3">BetterF3 (by cominixo)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/atlantis">Atlantis (by mysticpasta1)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mo-colors">Mo' Colors (by GabrielHOlv)</a></li>
@@ -52,6 +53,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/medieval-origins">Medieval Origins (by ItsParkieLad)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/twigs">Twigs (by ninnih_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/auto-config-updated-api">Auto Config Updated API (by shedaniel)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ore-tree-reborn-fabric">Ore Tree:Reborn [FABRIC] (by mikhailtapio)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/urns">Urns (by bernardozomer)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/golems-galore">Golems Galore (by ffrannny)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/byg-plus">Oh The Biomes You'll Go Plus (by chuunkyz)</a></li>
@@ -109,7 +111,6 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/trashslot-fabric-edition">TrashSlot (Fabric Edition) (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/auth-me">Auth Me (by Axieum)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/extra-origins">Extra Origins (by MoriyaShiine)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/youre-in-grave-danger">You're in Grave Danger (by b1n_ry)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/xp-storage">XP Storage (by sfinc)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/creeper-overhaul">Creeper Overhaul (by joosh_7889)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/lazydfu">LazyDFU (by tuxed)</a></li>
@@ -118,10 +119,12 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bits-and-chisels">Bits And Chisels (by cool_mineman)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/autoclick-machine">Click Machine (Fabric) (by DmitryKenza)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mythicmetals">Mythic Metals (by Noaaan)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ingredient-extension-api">Ingredient Extension API (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/dynamic-fps">Dynamic FPS (by juliand665)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/extra-classes-origins">Extra Classes - Origins (by proman468)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/techreborn">Tech Reborn (by modmuss50)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/health-overlay-fabric">Health Overlay (Fabric) (by Terrails)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/cloth-api">Cloth API (Fabric) (by shedaniel)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/magic-combat-wands">Magic Combat Wands (by dmitrylovin)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/amplified-nether">Amplified Nether (by Starmute)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/botania-fabric">Botania (Fabric) (by williewillus)</a></li>
@@ -149,6 +152,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/platforms-fabric">Platforms [Fabric] (by ShetiPhian)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/market-crates">[Fabric/Forge] Market Crates 1.16/1.17/1.18 (by lfaoanl)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/creeper-spores">Creeper Spores (For Fabric) (by PyrofabTheModsmith)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/simple-backpack-fabric">Simple Backpack [FABRIC] (by kwpugh)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/the-bumblezone-fabric">The Bumblezone (Fabric) (by telepathicgrunt)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fabric-seasons">Fabric Seasons (by D4rkness_King)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/i-know-what-im-doing">I Know What I'm Doing (IKWID) (by HeckinChloe)</a></li>
@@ -162,12 +166,14 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/terrarian-slimes">Terrarian Slimes (by D4rkness_King)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/toms-storage-fabric">Tom's Simple Storage Mod (Fabric) (by tom54541)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/haema">Haema (by the_will_bl)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/crafttweaker">CraftTweaker (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/caracal-mod">Caracal Mod (Fabric/Forge) (by AqUpd)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/incantationem">Incantationem (by Luligabi12)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ring-of-the-enderchest-fabric">Ring of the Enderchest [FABRIC] (by kwpugh)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/quartz-elevator">Quartz Elevator (by atonkish)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fastbench-for-fabric">FastBench for Fabric (by tfarecnim)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/stoneholm">Stoneholm, Underground Villages (Fabric) (by TheGrimsey)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/pet-owner">Pet Owner (by potatoboy99999)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/unforgiving-void">Unforgiving Void (by The_Fireplace)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fabric-api">Fabric API (by modmuss50)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/dynamic-music">Dynamic Music (by LudoCrypt)</a></li>
@@ -177,9 +183,11 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/architectury-fabric">Architectury API (Fabric) (by shedaniel)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cammies-wearable-backpacks">Cammie's Wearable Backpacks (by Camellias_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/promenade">Promenade (by Hugman_76)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/universal-ores-fabric">Universal Ores (Fabric) (by Hugman_76)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mavm">More Axolotl Variants Mod (by Akashii_Kun_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/public-gui-announcement">Public Gui Announcement (by AbsolemJackdaw)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fastopenlinksandfolders">FastOpenLinksAndFolders (by altrisi)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ring-of-attraction-fabric">Ring of Attraction [FABRIC] (by kwpugh)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mo-glass">Mo Glass (by alexander9892)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/spatial-harvesters-fabric">Spatial Harvesters [FABRIC] (by Dunkmania101)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/xaeros-world-map">Xaero's World Map (by xaero96)</a></li>
@@ -190,6 +198,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/betterend">BetterEnd (by paulevs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/controlling">Controlling (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/towers-of-the-wild-additions">Towers of the Wild: Additions (by Aureljz)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/croptosis">Croptosis (by LordDeatHunter)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/on-soul-fire">On Soul Fire (by MoriyaShiine)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/couplings">Couplings (by HeckinChloe)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-paintings">Macaw's Paintings (by sketch_macaw)</a></li>
@@ -201,6 +210,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mining-utility">Mining Utility (by Luligabi12)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/enchantment-descriptions">Enchantment Descriptions (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/break-progress">Break Progress (by haykam)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/universal-graves">Universal Graves (by Patbox)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/visuality">Visuality (by PinkGoosik)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ferritecore-fabric">FerriteCore (Fabric) (by malte0811)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/more-banner-features">More Banner Features (by KxmischesDomi)</a></li>
@@ -226,6 +236,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/phonos">Phonos (by FoundationGames)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/simple-teleporters-fabric">Simple Teleporters (Fabric) (by Lemonszz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/blockus">Blockus (by Brandcraft_)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/farming-for-blockheads-fabric">Farming for Blockheads (Fabric Edition) (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/origins">Origins (Fabric) (by Apace100)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/autorun-fabric">AutoRun (Fabric) (by Emonadeo)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/paradise-lost">Paradise Lost (by ImmortalDevs)</a></li>
@@ -244,9 +255,11 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fabric-waystones">Fabric Waystones (by LordDeatHunter)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/moon-and-space-dimensions-fabric">Space Dimensions (Fabric) (by captaintenneal81)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/megane">megane (by badasintended)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ring-of-teleport-fabric">Ring Of Teleport [FABRIC] (by kwpugh)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sandwichable">Sandwichable (by FoundationGames)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/trinkets-fabric">Trinkets (Fabric) (by EmilyPloszaj)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/yungs-better-mineshafts-fabric">YUNG's Better Mineshafts (Fabric) (by YUNGNICKYOUNG)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/infinite-music">Infinite Music (by frinn38)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sodium-extra">Sodium Extra (by FlashyReese)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-ultimine-fabric">FTB Ultimine (Fabric) (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ninjaphenixs-container-library">NinjaPhenix's Container Library (by NinjaPhenix)</a></li>
@@ -262,6 +275,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/magitek-mechs">Magitek Mechs (by DigiDigi_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/no-null-processors">No Null Processors (by telepathicgrunt)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ezpas">EZ Pipes and Stuff (EZPaS) (by kqp_)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/mob-catcher-fabric">Mob Catcher [FABRIC] (by kwpugh)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/starlight">Starlight (Fabric) (by Spottedstar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/four-elemental-swords">Four Elemental Swords [FORGE & FABRIC] (by 00theblackwolf00)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/pehkui">Pehkui (by Virtuoel)</a></li>
@@ -300,6 +314,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/hookshot">Hookshot (by Camellias_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/quarry-reborn">Quarry Reborn (by TED_inc)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/when-dungeons-arise-fabric">When Dungeons Arise - Fabric! (by Aureljz)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/mouse-tweaks">Mouse Tweaks (by YaLTeR)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cull-leaves">Cull Leaves (by Motschen)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/friends-and-foes">Friends&Foes [Fabric] (by faboslav)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/companion-fabric">Companion 🐕 (Fabric) (by Snownee_)</a></li>
@@ -307,6 +322,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/adorn">Adorn (by Juicebus)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/dawn">Dawn API (by Hugman_76)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/easy-magic-fabric">Easy Magic [Fabric] (by Fuzs_)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/trading-post-fabric">Trading Post [Fabric] (by Fuzs_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/largefluidtank-fabric">Large Fluid Tank for Fabric (by Kotori316)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/geckolib">GeckoLib (by ThanosGecko)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/extra-generators">Extra Generators (by D4rkness_King)</a></li>
@@ -330,6 +346,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/explorers-compass">Explorer's Compass (by Chaosyr)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/npc-variety-port">NPC Variety - Port (Fabric) (by YumatanGames)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/nikolite-expansion">Nikolite Expansion (by Luligabi12)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/replanter">Replanter (by Areuthreateningme)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/things-fabric">Things [Fabric] (by gliscowo)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/overlord">Overlord (by The_Fireplace)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-fences-and-walls">Macaw's Fences and Walls (by sketch_macaw)</a></li>
@@ -352,5 +369,6 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/wolves-with-armor">Wolves With Armor (by Draylar1)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/patchouli-fabric">Patchouli (Fabric) (by williewillus)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mcdar">MC Dungeons Artifacts (by chronos_sacaria)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ring-of-growth-fabric">Ring of Growth [FABRIC] (by kwpugh)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/backslotaddon">BackSlotAddon (by Globox_Z)</a></li>
 </ul>
